--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -2,6 +2,8 @@
     background: linear-gradient(135deg, #0d0d0d, #292929);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     border-bottom: 1px solid black;
+    padding-top:50px;
+    padding-bottom: 10px;
 }
 
 #timeline h2 {
