--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,8 +6,9 @@
     flex-direction: column; 
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #0d0d0d, #292929);
+    background: black;
     box-sizing: border-box; 
+    border-top:1px solid rgba(75, 75, 75, 0.5); 
 }
 .box-links-footer {
     width:100%;
@@ -43,9 +44,8 @@
 
 .title-reseaux, .title-mentions {
     font-family: 'Ysabeau SC', sans-serif;
-    color: aqua;
+    color: white;
     font-size: 20px;
-    text-decoration: underline;
     margin-left: 10px;
 }
 
@@ -113,15 +113,34 @@
 }
 
 .legal-notice .buttons-mentions{
-    color: aqua; 
+    color: white; 
     text-decoration: none;
     margin: 0 10px;
     font-family: 'Ysabeau SC', sans-serif;
     cursor: pointer;
+    transition: transform 0.3s ease, color 0.3s ease; 
+}
+
+
+.legal-notice .buttons-mentions::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background-color: aqua; 
+    transition: width 0.3s ease, left 0.3s ease; 
 }
 
 .legal-notice .buttons-mentions:hover {
-    text-decoration: underline;
+    color: aqua;
+    transform: translateY(-2px); 
+}
+
+.legal-notice .buttons-mentions:hover::after {
+    width: 100%;
+    left: 0;
 }
 
 .print-button {
@@ -130,10 +149,10 @@
     0 0 0 -1.5px #0d0d0d;
     border:2px solid black;
     padding:10px;
-    border-radius: 15px;
+    border-radius: 20px;
     background: #0d0d0d;
     font-family: 'Ysabeau SC', sans-serif;
-    color: aqua; 
+    color: white; 
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease; 
@@ -236,5 +255,148 @@
 
     .container-reseaux {
         align-items: center;
+    }
+}
+
+@media print {
+    .page-break {
+      page-break-after:always; /* Force un saut de page après chaque section */
+      page-break-inside:avoid; /* Évite de couper une section au milieu */
+    }
+
+    html, body{
+        background-color: black!important;
+        z-index: -1;
+    }
+
+    iframe {
+        background: black !important;
+    }
+
+    .container-navbar {
+        display:none;
+    }
+    .box-hero {
+        flex-direction: column-reverse !important;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+    .container-txt {
+        width: 90% !important;
+        padding:0 5% 120px!important;
+
+    }
+    .we-are, .title-hero, .subtitle-hero {
+        animation:none !important;
+        opacity:1 !important;
+        transform: none !important;
+        transition:none !important;
+        margin:0 !important;
+        padding:0 !important;
+    }
+
+    .container-footer {
+        display:none;
+    }
+
+    #timeline {
+        padding-top:140px !important;
+        padding-bottom: 10px !important;
+    }
+
+    #timeline h2 {
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+        padding-bottom: 0 !important;
+    }
+
+    .container-about, .content-about {
+        background-color: transparent;
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .txt-about {
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .subtitle-about {
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .box-specifications {
+        margin-top: 150px !important;
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .container-services {
+        padding-top: 70px !important;
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .services-title {
+        margin-top: 0 !important;
+        padding-top: 0 !important;
+        margin-bottom:70px!important;
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .container-promo {
+        margin-top: 200px !important;
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .ontainer-promo {
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .evolution {
+        margin-top: 600px !important;
+        padding-top: 0 !important;
+    }
+
+    .title-evolution {
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .container-contact {
+        margin-top: 0px !important;
+        padding-top: 0 !important;
+        animation: none !important;
+        opacity: 1 !important;
+        transform: none !important;
+        transition:none !important;
+    }
+
+    .recaptcha-container {
+        display: none !important;
     }
 }
