--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -1,5 +1,5 @@
 #timeline {
-    background: linear-gradient(135deg, #0d0d0d, #292929);
+    background: black;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     border-bottom: 1px solid black;
     padding-top:50px;
@@ -123,7 +123,7 @@
     inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
     0 0 0 5.5px #080808;
     padding:15px;
-    background:#111111 ;
+    background:black ;
 }
 
 #timeline ul li .box {
