--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -1,12 +1,15 @@
 .container-contact {
-    padding:5%;
+    padding-left:5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
+    padding-top:100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width:90%;
     min-height: 350px;
-    background:#202020;
+    background:black;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); 
     border-bottom:1px solid black;
     opacity: 0;
@@ -103,7 +106,7 @@
     cursor: pointer;
     font-size: 16px;
     box-shadow: 0 3px 4px #292828, inset 0 -2px 5px #292929,
-    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px #2a2a2a, 0 0 0 5px #252525,
+    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px black, 0 0 0 5px black,
     0 0 0 1.5px #343434;
 
 }
@@ -164,7 +167,8 @@
 
     .contact-form{
         width:90%;
-        margin-bottom: 100px;
+        padding-bottom: 0;
+        margin-bottom: 40px;
     }
 
     .form-group input,
