--- a/src/pages/Services/services.css
+++ b/src/pages/Services/services.css
@@ -1,7 +1,7 @@
 .container-services {
     width: 100%;
-    background: #202020;
-    padding: 50px 20px 80px;
+    background:black;
+    padding: 100px 20px 80px;
     box-sizing: border-box;
     text-align: center;
     border-bottom: 1px solid black;
@@ -28,7 +28,7 @@
     font-family: 'Ysabeau SC', sans-serif;
     color: aqua;
     font-size: 28px;
-    background: #202020;
+    background: black;
     position: relative;
     animation-name: text;
     animation-duration: 10s;
@@ -61,13 +61,13 @@
 }
 
 .service-card {
-    background: #333;
+    background: black;
     border-radius: 8px;
     width: 400px;
     transition: transform 0.3s ease;
     box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
-    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #33333330, 0 0 0 5px #33333330,
-    0 0 0 5.5px #33333330;
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
     padding:15px;
     margin-bottom: 10px;
 }
@@ -143,7 +143,7 @@
     cursor: pointer;
     font-size: 16px;
     box-shadow: 0 3px 4px #343434, inset 0 -2px 5px #343434,
-    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px #343434, 0 0 0 5px #343434,
+    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px black, 0 0 0 5px black,
     0 0 0 1.5px #343434;
 }
 
@@ -221,4 +221,3 @@
         text-align: left;
     }
 }
-
