--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -8,13 +8,12 @@
     src: url('../../assets/fonts/Boheme\ Floral.ttf') format('truetype')
 }
 
-
 .container-header {
     display:flex;
     flex-direction: row;
     justify-content: center;
     align-items:center;
-    width:180px;
+    width:240px;
     height:100px;
     padding-left:0%;
     margin-bottom:0;
@@ -23,6 +22,7 @@
 
 .container-containers {
     width:100%;
+    height:100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -63,8 +63,8 @@
     text-align: center;
     font-family: 'Cinzel';
     color:white;
-    font-size: 14px;
-    line-height: 40px;
+    font-size: 19px;
+    line-height: 22px;
     font-weight: 200;
     width:100%;
 }
@@ -75,10 +75,10 @@
     align-items: center;
     justify-content: space-between;
     height:5px;
-    width:160px;
-    margin-top:-20px;
-    border:1px solid black;
-    border-radius: 3px;
+    min-width:240px;
+    margin-top:-10px;
+    border: 1px solid black;
+    border-radius: 4px;
     animation: expandWidth 3s ease-in-out forwards, shimmer 2s ease-in-out infinite;
 }
 
@@ -107,6 +107,7 @@
     width:33.3%;
     height:5px;
     background: blue;
+    border-radius: 2px 0 0 2px;
 }
 
 .blanc {
@@ -116,6 +117,7 @@
 }
 
 .rouge {
+    border-radius:0 2px 2px 0;
     width:33.3%;
     height: 5px;
     background:red;
@@ -129,8 +131,8 @@
 }
 
 .britain {
-    width:40px;
-    height: 40px;
+    width:55px;
+    height: 55px;
 }
 
 .subtitle-app {
@@ -139,15 +141,15 @@
     justify-content: center;
     font-family: 'Boheme';
     color:white;
-    font-size: 20px;
-    line-height: 40px;
+    font-size: 32px;
+    line-height: 36px;
     font-weight: 100;
-    margin-top: 0px;
+    margin-top: 10px;
     margin-left: 5px;
 
 }
 
-@media screen and (max-width:1247px) {
+/*@media screen and (max-width:1247px) {
     .container-header {
         width:180px;
         padding-top: 0;
@@ -265,4 +267,4 @@
         margin-left:1px;
         line-height: 12px;
     }
-}
+}*/
