--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
+    height:150px;
     padding: 10px 5%;
     background-color: black;
     position: fixed;
@@ -35,12 +36,14 @@
 .nav-left {
     display: flex;
     justify-content: flex-start;
+    width:34%;
 }
 
 /* Section droite */
 .nav-right {
     display: flex;
     justify-content: flex-end;
+    width:34%;
 }
 
 /* Logo centré */
@@ -52,8 +55,9 @@
 
 /* Styles des items de navigation */
 .nav-item {
+    width:33.3%;
     position: relative;
-    padding: 0 20px;
+    padding: 0;
     text-decoration: none;
     transition: color 0.3s ease-in-out;
 }
@@ -98,12 +102,35 @@
     cursor: pointer;
 }
 
+@media screen and (max-width: 935px) {
+    .container-navbar {
+        width: 94%;
+        padding: 10px 3%;
+    }
+    .nav-header {
+        width: 100%;
+    }
+    .nav-items {
+        width:100%;
+    }
+    .nav-left{
+        width:35%;
+    }
+    .nav-right {
+        width:35%;
+    }
+    .nav-item {
+        width:30%;
+        padding:0px ;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .nav-items {
         display: none;
         position: absolute;
-        top: 70px;
-        left: 55px;
+        top: 95px;
+        left: 45px;
         width: 120px;
         background-color: rgba(0, 0, 0, 0.9);
         flex-direction: column;
