--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -28,6 +28,7 @@
     justify-content: center;
     align-items: center;
     width: 88%;
+    padding-top:50px;
     padding-left: 6%;
     padding-right: 6%;
     z-index: 1;
