--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,4 +1,6 @@
 .modal-overlay {
+    width:100%;
+    height:100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -11,6 +13,11 @@
 }
 
 .modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top:70%;
     background: #171717;
     padding: 20px;
     border-radius: 8px;
