--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -17,13 +17,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    top:70%;
-    background: #171717;
-    padding: 20px;
+    margin-top:200px;
+    background: black;
     border-radius: 8px;
     max-width: 500px;
     width: 80%;
-    box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
+    padding:20px;
     text-align: center;
 }
 
