--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top:200px;
+    margin-top:400px;
     background: black;
     border-radius: 8px;
     max-width: 500px;
@@ -51,6 +51,9 @@
     cursor: pointer;
     font-size: 1em;
     font-family: 'Ysabeau SC', sans-serif;
+    box-shadow: 0 3px 4px #343434, inset 0 -2px 5px #343434,
+    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px black, 0 0 0 5px black,
+    0 0 0 1.5px #343434;
 }
 
 .modal-close-button:hover {
