--- a/src/components/CookiesConsent/cookiesConsent.css
+++ b/src/components/CookiesConsent/cookiesConsent.css
@@ -1,19 +1,19 @@
 /* Bandeau cookies fixé en bas */
 .cookies-banner {
     position: fixed;
-    bottom: 0; /* Fixe le bandeau en bas */
+    bottom: 0;
     left: 0;
     right: 0;
-    width: 100%; /* Largeur totale */
-    background: rgba(0, 0, 0, 0.85); /* Arrière-plan noir légèrement transparent */
+    width: 92%; 
+    background: rgba(0, 0, 0, 0.85); 
     font-family: 'Ysabeau SC', sans-serif;
-    color: white; /* Texte en blanc */
-    padding: 15px 30px; /* Espacement interne */
-    z-index: 1000; /* S'assure que le bandeau est au-dessus du contenu */
-    display: flex; /* Flex pour aligner le contenu */
-    justify-content: space-between; /* Sépare le texte des boutons */
-    align-items: center; /* Centre verticalement */
-    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.5); /* Ajout d'une ombre pour effet */
+    color: white; 
+    padding: 15px 4%; 
+    z-index: 1000; 
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.5); 
 }
 
 /* Conteneur du contenu du bandeau */
@@ -27,7 +27,7 @@
 
 /* Boutons du bandeau cookies */
 .cookies-banner-buttons button {
-    background-color: aqua; /* Couleur verte */
+    background-color: aqua; 
     border: none;
     color: black;
     padding: 10px 20px;
@@ -38,13 +38,59 @@
 }
 
 .cookies-banner-buttons button:hover {
-    background-color: rgb(1, 221, 221); /* Changement de couleur au survol */
+    background-color: rgb(1, 221, 221); 
 }
 
 .cookies-banner-buttons button:nth-child(2) {
-    background-color: #f44336; /* Couleur rouge pour le refus */
+    background-color: #f44336; 
 }
 
 .cookies-banner-buttons button:nth-child(2):hover {
-    background-color: #da190b; /* Changement de couleur au survol */
+    background-color: #da190b; 
+}
+
+@media screen and (max-width: 1183px) {
+
+    .cookies-banner {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-shadow: none;
+    }
+    .cookies-banner-content {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cookies-banner-content p{
+        text-align: center;
+    }
+
+    .cookies-banner-buttons {
+        width:40%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .cookies-banner-buttons button {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .cookies-banner-buttons {
+        width:60%;
+    }
+}
+
+@media screen and (max-width: 590px) {
+    .cookies-banner-buttons {
+        width:80%;
+    }
 }
