--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -186,6 +186,7 @@
     .logo-centered {
         position: static;
         transform: none;
-        margin-right: 20px;;
+        margin-right: auto;
+        margin-left: auto;
     }
 }
