--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -129,29 +129,31 @@
     .nav-items {
         display: none;
         position: absolute;
-        top: 94px;
-        left: 41px;
-        width: 130px;
-        background-color: rgba(0, 0, 0, 0.9);
-        flex-direction: column;
-        align-items: flex-start;
+        width: 94%;
+        top:0;
+        left:0;
+        background-color: rgba(0, 0, 0, 0.77);
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
         z-index: 998;
-        border-radius: 0px 8px 8px 8px;
-        border: 2px solid white;
-        box-shadow: 0 1px 4px 1px rgba(255, 255, 255, 0.506);
+        opacity: 0;
+        animation: none; 
+        padding-left: 3%;
+        padding-right: 3%;
     }
 
     .nav-items.active {
         display: flex;
-        width:130px;
+        animation: slideOpen 0.6s forwards;
     }
 
     .nav-left, .nav-right {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
-        padding: 0px 20px;
+        align-items: center;
+        padding: 0px 0px;
         width:40%;
     }
 
@@ -159,6 +161,29 @@
         width:100%;
         padding: 0px 0;
         text-align: left;
+        opacity: 0;
+        animation: fadeOpen 0.5s forwards ease 0.3s;
+    }
+
+    @keyframes slideOpen {
+        0% {
+            opacity: 0;
+            transform: translateY(-100%);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
+    /* Animation d'apparition des items du menu */
+    @keyframes fadeOpen {
+        0% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 1;
+        }
     }
 
     .menu-toggle {
