--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -9,10 +9,23 @@
     padding-right: 40px;
     border-radius: 15px;
     margin: 0px auto;
-    max-width: 800px;
+    max-width: 950px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.6);
     animation: fadeIn 1.5s ease-in-out;
     text-align: center;
+    overflow: hidden;
+}
+/* Création du motif géométrique dans le fond */
+.intro-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    opacity: 0.3; /* Pour ne pas gêner la lisibilité du texte */
+    z-index: -1; /* Le fond doit être derrière le contenu */
 }
 
 /* Apparition en fondu */
@@ -78,10 +91,15 @@
     padding: 0;
     text-align: left;
     margin: 0 auto;
-    max-width: 700px;
+    max-width: 950px;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center; 
 }
 
 .intro-container li {
+    display: flex;
+    flex-direction: row;
     margin-bottom: 10px;
     position: relative;
     padding-left: 30px;
@@ -91,10 +109,10 @@
     animation: fadeInUp 1.2s ease-in-out;
     transition: color 0.3s ease, transform 0.3s ease;
     animation: slideInList 1.5s ease-out forwards;
+    width:100%;
 }
 
 .intro-container li::before {
-    content: "✔";
     position: absolute;
     left: 0;
     color: #00ffff;
@@ -130,3 +148,16 @@
     transform: translateY(-5px);
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.8);
 }
+
+.intro-container ul {
+    list-style: none; /* Enlève les puces par défaut */
+    padding: 0; /* Enlève le padding */
+}
+
+.intro-container li {
+    display: flex;
+    align-items: center; /* Aligne les icônes et le texte */
+    margin: 15px 0; /* Espace entre les éléments */
+}
+
+
