--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -94,6 +94,40 @@
     color: #ccc;
     font-size: 16px;
     margin-bottom: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.container-promo h3 {
+    font-family: 'Ysabeau SC', sans-serif;
+    color: #ccc;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+.box-promo1, .box-promo2{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    max-width: 1800px;
+    width:80%;
+    margin: 0 auto;
+    margin-left:auto;
+    margin-right: auto;
+    background: black;
+    margin-bottom: 40px;
+    border-radius: 8px;
+    box-shadow: 0 3px 4px rgb(0, 0, 0, 1), inset 0 -2px 5px rgba(0, 0, 0, 1),
+    inset 0 4px 15px rgba(255, 255, 255, 0.245), 0 0 0 2px #000, 0 0 0 5px #000000,
+    0 0 0 5.5px #080808;
+    padding:10px 10px 50px 10px;
+    
+}
+
+.box-promo1 {
+    margin-top:20px;
 }
 
 .promo-pack .original-price {
@@ -107,6 +141,14 @@
 
 .btn-promo:hover {
     background-color: white;
+}
+
+@media (max-width: 900px) {
+
+    .box-promo1, .box-promo2 {
+        margin: 0 auto;
+        width: 87.5%;
+    }
 }
 
 @media (max-width: 768px) {
@@ -123,7 +165,22 @@
         width: 90%;
         margin-bottom: 20px;
     }
+
+    .box-promo1, .box-promo2 {
+        margin: 0 auto;
+        width: 90%;
+        padding:3%;
+    }
+
+    .box-promo1 {
+        margin-bottom: 40px;
+    }
     .container-promo p {
+        width:90%;
+        margin-left:auto;
+        margin-right:auto;
+    }
+    .container-promo h3 {
         width:90%;
         margin-left:auto;
         margin-right:auto;
