--- a/src/pages/Services/services.css
+++ b/src/pages/Services/services.css
@@ -104,11 +104,44 @@
     text-align: left;
 }
 
+.container-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left:auto;
+    margin-right: auto;
+    width:100%;
+    padding-top: 20px;
+}
+
 .price {
     font-family: 'Ysabeau SC', sans-serif;
     color: #fff;
     font-size: 24px;
     margin-bottom: 20px;
+}
+
+.link-devis {
+    position:relative;
+    margin-bottom: 20px;
+    transition: background-color 0.3s ease;
+    padding: 10px 20px;
+    background-color: aqua;
+    color: black;
+    font-family: 'Ysabeau SC', sans-serif;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    box-shadow: 0 3px 4px #343434, inset 0 -2px 5px #343434,
+    inset 0 4px 5px rgba(255, 255, 255, 0.245), 0 0 0 2px black, 0 0 0 5px black,
+    0 0 0 1.5px #343434;
+    text-decoration: none;
+}
+
+.link-devis:hover {
+    background-color: white;
 }
 
 .time, .payment, .evolution {
