--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -103,6 +103,7 @@
 }
 
 @media screen and (max-width: 935px) {
+
     .container-navbar {
         width: 94%;
         padding: 10px 3%;
@@ -156,8 +157,12 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0px 0px;
-        width:40%;
+        padding: 0px 10px;
+        width:100px;
+    }
+
+    .nav-left {
+        margin-right:40px;
     }
 
     .nav-item {
@@ -198,7 +203,7 @@
     }
 
     .nav-item {
-        width:55%;
+        width:75%;
     }
     .nav-item::after {
         bottom: -2px; 
@@ -209,6 +214,10 @@
     }
 
     .nav-item-text {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
         font-size: 16px;
         text-align: center;
         width:100%;
