--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -263,6 +263,10 @@
 }
 
 @media screen and (max-width: 768px) {
+    .container-hero {
+        padding-top: 205px;
+    }
+
     .box-hero {
         flex-direction: column;
         text-align: center;
