--- a/src/components/CookiesConsent/cookiesConsent.css
+++ b/src/components/CookiesConsent/cookiesConsent.css
@@ -27,7 +27,7 @@
 
 /* Boutons du bandeau cookies */
 .cookies-banner-buttons button {
-    background-color: aqua; 
+    background-color: #61DAFB; 
     border: none;
     color: black;
     padding: 10px 20px;
