--- a/src/components/DetailsPack/detailspack.css
+++ b/src/components/DetailsPack/detailspack.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     transition: max-height 0.3s ease;
     padding: 0 20px;
-    background-color: rgba(0, 255, 255, 0.996);
+    background-color: #61DAFB;
     margin-top: 10px;
     color:black;
     border-radius:5px;
