--- a/src/components/Policy/policy.css
+++ b/src/components/Policy/policy.css
@@ -30,7 +30,7 @@
 }
 
 .legal-notice-section a, .privacy-policy-section a, .terms-of-service-section a {
-    color: aqua;
+    color: #61DAFB;
     text-decoration: none;
     font-family: 'Ysabeau SC', sans-serif;
 }
