--- a/src/components/Promo/promo.css
+++ b/src/components/Promo/promo.css
@@ -19,13 +19,13 @@
 
 .container-promo .fa-percent {
     font-size: 32px;
-    color: aqua;
+    color: #61DAFB;
     margin-top: 60px;
 }
 
 .container-promo h2 {
     font-family: 'Ysabeau SC', sans-serif;
-    color: aqua;
+    color: #61DAFB;
     font-size: 28px;
     margin-bottom: 20px;
     /* Animation */
