--- a/src/pages/Error/error.css
+++ b/src/pages/Error/error.css
@@ -39,7 +39,7 @@
 
 .fa-circle-exclamation {
     text-align: center;
-    color:blue;
+    color:#61DAFB;
     font-size: 120px;
     margin: 30px auto 60px auto;
 }
