--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -129,12 +129,12 @@
     bottom: -2px;
     width: 0;
     height: 2px;
-    background-color: aqua; 
+    background-color: #61DAFB; 
     transition: width 0.3s ease, left 0.3s ease; 
 }
 
 .legal-notice .buttons-mentions:hover {
-    color: aqua;
+    color: #61DAFB;
     transform: translateY(-2px); 
 }
 
@@ -168,7 +168,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #00FFFF; 
+    background: #61DAFB; 
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 0.3s ease;
@@ -181,11 +181,11 @@
 }
 
 .print-button:hover {
-    background-color: #00FFFF; 
+    background-color: #61DAFB; 
     transform: scale(1.05); 
     color:black;
     box-shadow: 2 2px 5px rgba(0, 255, 255, 0.87), inset -5 -5px 10px rgba(0, 255, 255, 0.791),
-    inset 0 4px 15px aqua, 0 0 0 2px aqua, 0 0 0 5px aqua,
+    inset 0 4px 15px #61DAFB, 0 0 0 2px #61DAFB, 0 0 0 5px #61DAFB,
     0 0 0 5.5px rgba(0, 255, 255, 0.791);
 }
 
