--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -199,6 +199,10 @@
 }
 
 @media screen and (max-width: 1306px) { 
+    .container-hero {
+        padding-top:175px;
+    }
+
     .box-hero {
         width:70%;
     }
@@ -221,6 +225,10 @@
 }
 
 @media screen and (max-width: 1037px) {  
+    .container-hero {
+        padding-top:175px;
+    }
+
     .box-hero {
         width:75%;
     }
@@ -245,10 +253,15 @@
 }
 
 @media screen and (max-width: 918px) { 
+    .container-hero {
+        padding-top:205px;
+    }
+
     .box-hero {
         width: 90%;
         padding:3%;
     }
+
     .we-are {
         font-size: 30px;
     }
