--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -43,7 +43,7 @@
 }
 
 .modal-close-button {
-    background-color: aqua;
+    background-color: #61DAFB;
     color: black;
     padding: 10px 20px;
     border: none;
