--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -38,7 +38,7 @@
 }
 
 .content-about .fa-address-card {
-    color:aqua;
+    color:#61DAFB;
     font-size: 32px;
     margin-top: 120px;
 }
@@ -55,7 +55,7 @@
     font-size: 28px;
     font-family: 'Ysabeau SC', sans-serif;
     margin-bottom: 10px;
-    color:aqua;
+    color:#61DAFB;
     margin-bottom: 20px;
     background: black;
     position: relative;
@@ -100,7 +100,7 @@
     text-align: left;
     box-sizing: border-box;
     margin: 0;
-    border-left: 3px solid aqua;
+    border-left: 3px solid #61DAFB;
     padding-left: 20px;
     transform: translateX(-100%);
     animation: slideIn 2s forwards;
@@ -135,7 +135,7 @@
 
 .li i {
     margin-right: 10px;
-    color:aqua;
+    color:#61DAFB;
     font-size: 22px;
 }
 
@@ -175,7 +175,7 @@
 .specification {
     font-size: 24px;
     margin-bottom: 10px;
-    color:aqua;
+    color:#61DAFB;
     font-family: 'Ysabeau SC', sans-serif;
 }
 
@@ -294,7 +294,7 @@
 }
 
 .content-about .fa-address-card {
-    color:aqua;
+    color:#61DAFB;
     font-size: 32px;
     margin-top: 120px;
 }
@@ -311,7 +311,7 @@
     font-size: 28px;
     font-family: 'Ysabeau SC', sans-serif;
     margin-bottom: 10px;
-    color:aqua;
+    color:#61DAFB;
     margin-bottom: 20px;
     background: black;
     position: relative;
@@ -356,7 +356,7 @@
     text-align: left;
     box-sizing: border-box;
     margin: 0;
-    border-left: 3px solid aqua;
+    border-left: 3px solid #61DAFB;
     padding-left: 20px;
     transform: translateX(-100%);
     animation: slideIn 2s forwards;
@@ -391,7 +391,7 @@
 
 .li i {
     margin-right: 10px;
-    color:aqua;
+    color:#61DAFB;
     font-size: 22px;
 }
 
@@ -431,7 +431,7 @@
 .specification {
     font-size: 24px;
     margin-bottom: 10px;
-    color:aqua;
+    color:#61DAFB;
     font-family: 'Ysabeau SC', sans-serif;
 }
 
