--- a/src/pages/Avis/avis.css
+++ b/src/pages/Avis/avis.css
@@ -11,7 +11,7 @@
 
 .title-avis {
     font-family: 'Ysabeau SC', sans-serif;
-    color:aqua;
+    color:#61DAFB;
     font-size: 28px;
     position: relative;
     text-align: center;
@@ -19,7 +19,7 @@
 
 .fa-edit {
     width: 100%;
-    color: aqua;
+    color: #61DAFB;
     font-size: 32px;
     margin-top: 60px;
     text-align: center;
@@ -27,7 +27,7 @@
 
 .title-contact {
     font-family: 'Ysabeau SC', sans-serif;
-    color:aqua;
+    color:#61DAFB;
     font-size: 28px;
     position: relative;
     animation-name: text;
@@ -78,8 +78,8 @@
     margin-right: auto;
     font-size: 24px;
     background-color: #333;
-    color: aqua;
-    border: 2px solid aqua;
+    color: #61DAFB;
+    border: 2px solid #61DAFB;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -144,7 +144,7 @@
 }
 
 .review-form h3 {
-    color:aqua;
+    color:#61DAFB;
     font-family: 'Ysabeau SC', sans-serif;
 }
 
@@ -175,7 +175,7 @@
     border-radius: 15px;
     background: #0d0d0d;
     font-family: 'Ysabeau SC', sans-serif;
-    color: aqua; 
+    color: #61DAFB; 
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease; 
@@ -191,7 +191,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #00FFFF; 
+    background: #61DAFB; 
     transform: scaleX(0);
     transform-origin: right;
     transition: transform 0.3s ease;
@@ -204,12 +204,12 @@
 }
 
 .review-form button:hover {
-    background-color: #00FFFF; 
+    background-color: #61DAFB; 
     transform: scale(1.05); 
     color:black;
-    box-shadow: 2 2px 5px rgba(0, 255, 255, 0.87), inset -5 -5px 10px rgba(0, 255, 255, 0.791),
-    inset 0 4px 15px aqua, 0 0 0 2px aqua, 0 0 0 5px aqua,
-    0 0 0 5.5px rgba(0, 255, 255, 0.791);
+    box-shadow: 2 2px 5px #61DAFB, inset -5 -5px 10px #61DAFB,
+    inset 0 4px 15px #61DAFB, 0 0 0 2px #61DAFB, 0 0 0 5px #61DAFB,
+    0 0 0 5.5px #61DAFB;
 }
 
 .review-form button span {
