--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -362,6 +362,10 @@
         margin-top: 400px !important;
     }
 
+    #blog-title {
+        margin-top: 600px !important;
+    }
+
     #timeline {
         display:none !important;
         animation:none !important;
