ajout article du jour

--- a/src/pages/Blog/blog.css
+++ b/src/pages/Blog/blog.css
@@ -7,6 +7,9 @@
     width:90%;
     padding:  200px 5% 40px;
     background-color: black;
+    /*background:url('../../assets/images/774418072505.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;*/
     color: white; 
     margin: auto; 
 }
